--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Ritchie Pub.",
-  "short_name": "ritchie",
+  "name": "Cat by HB.",
+  "short_name": "cattie",
   "display": "standalone",
   "orientation": "any",
   "start_url": "./?utm_source=homescreen",
